--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,49 @@
-# Core dependencies
-pyspark>=3.2.0
-pytest>=6.0.0
-pandas>=1.3.0
-numpy>=1.20.0
-PyYAML>=6.0
-click>=8.0.0
-fastapi>=0.68.0
-uvicorn>=0.15.0
-streamlit>=1.9.0
-matplotlib>=3.4.0
-seaborn>=0.11.0
-pyarrow>=5.0.0
-
-# Development dependencies
-black>=22.3.0
-flake8>=4.0.1
-mypy>=0.950
-isort>=5.10.1
-pytest-cov>=3.0.0
-pytest-mock>=3.7.0
-sphinx>=4.5.0
-pre-commit>=2.19.0pytest>=7.0.0
-pytest-spark>=0.6.0
+altair==5.5.0
+attrs==25.3.0
+blinker==1.9.0
+Brotli @ file:///private/var/folders/sy/f16zz6x50xz3113nwtb9bvq00000gp/T/abs_d7pp3g74_g/croot/brotli-split_1736182638718/work
+cachetools==5.5.2
+certifi==2025.4.26
+charset-normalizer==3.4.2
+click==8.2.1
+contourpy @ file:///private/var/folders/c_/qfmhj66j0tn016nkx_th4hxm0000gp/T/abs_6236u4rf19/croot/contourpy_1732540057596/work
+cycler @ file:///tmp/build/80754af9/cycler_1637851556182/work
+fonttools @ file:///private/var/folders/sy/f16zz6x50xz3113nwtb9bvq00000gp/T/abs_706ove9ndu/croot/fonttools_1737039799828/work
+gitdb==4.0.12
+GitPython==3.1.44
+idna==3.10
+Jinja2==3.1.6
+jsonschema==4.23.0
+jsonschema-specifications==2025.4.1
+kiwisolver @ file:///private/var/folders/sy/f16zz6x50xz3113nwtb9bvq00000gp/T/abs_92lgswl3y6/croot/kiwisolver_1737040154211/work
+MarkupSafe==3.0.2
+matplotlib==3.10.0
+narwhals==1.41.0
+networkx==3.4.2
+numpy==2.2.6
+packaging @ file:///private/var/folders/c_/qfmhj66j0tn016nkx_th4hxm0000gp/T/abs_15t4xe1fp0/croot/packaging_1734472125760/work
+pandas==2.2.3
+pillow @ file:///private/var/folders/sy/f16zz6x50xz3113nwtb9bvq00000gp/T/abs_a48h7ifhf6/croot/pillow_1744613605363/work
+plotly==6.1.1
+protobuf==6.31.0
+pyarrow==20.0.0
+pydeck==0.9.1
+pyparsing @ file:///private/var/folders/sy/f16zz6x50xz3113nwtb9bvq00000gp/T/abs_32bhy1idl3/croot/pyparsing_1731445537860/work
+python-dateutil @ file:///private/var/folders/c_/qfmhj66j0tn016nkx_th4hxm0000gp/T/abs_efk5_uakg8/croot/python-dateutil_1716495742183/work
+pytz==2025.2
+referencing==0.36.2
+requests==2.32.3
+rpds-py==0.25.1
+setuptools==78.1.1
+six @ file:///private/var/folders/c_/qfmhj66j0tn016nkx_th4hxm0000gp/T/abs_2e3n1z57yz/croot/six_1744271514562/work
+smmap==5.0.2
+streamlit==1.45.1
+streamlit-elements==0.1.0
+tenacity==9.1.2
+toml==0.10.2
+tornado==6.5.1
+typing_extensions==4.13.2
+tzdata==2025.2
+unicodedata2 @ file:///private/var/folders/sy/f16zz6x50xz3113nwtb9bvq00000gp/T/abs_c9zunc70re/croot/unicodedata2_1736544422992/work
+urllib3==2.4.0
+wheel==0.45.1
